[gd_scene load_steps=4 format=3 uid="uid://v81r0hbty1bb"]

[ext_resource type="Script" uid="uid://dcfavpwm0w2lw" path="res://src/dino/menus/credits/Credits.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bo44ga11t2q8p" path="res://src/dino/menus/credits/CreditLine.tscn" id="2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u37kj"]
bg_color = Color(0.27454, 0.258915, 0.368338, 1)

[node name="Credits" type="CanvasLayer"]
script = ExtResource("1")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_u37kj")

[node name="CreditsScrollContainer" type="ScrollContainer" parent="PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
scroll_vertical = 380

[node name="CreditsLinesContainer" type="VBoxContainer" parent="PanelContainer/CreditsScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="CreditLine" parent="PanelContainer/CreditsScrollContainer/CreditsLinesContainer" instance=ExtResource("2")]
layout_mode = 2
text = "[center]Credits[/center]"

[node name="Button" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
theme_type_variation = &"YellowButton"
text = "Main Menu"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
